--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -99,7 +99,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:gravity="center|right"
-                android:text=" Blow out"
+                android:text="Extinguish"
                 android:visibility="visible" />
 
             <Button
